# cloth-simulator

./: CMakeLists.txt  README.md
include/: Application.h  Camera.h  ClothSystem.h  Renderer.h
shaders/: cloth.frag  cloth.vert  object.frag  skybox.vert
src/: Application.cpp  Camera.cpp  ClothSystem.cpp  Renderer.cpp  main.cpp
